cleanup, mostly xrefs

--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -12,7 +12,7 @@ The following procedure describe software channel setup and registering the inst
 [IMPORTANT]
 .Downloading Channels
 ====
-Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the channels for {sle} 15.
+Before you can select the correct child channels while creating the activation key, ensure you have completely downloaded the {productname} Proxy 4 channel and all the recommended and mandatory {sle} 15 channels.
 ====
 
 
@@ -21,7 +21,7 @@ Before you can select the correct child channels while creating the activation k
 
 
 . Create an activation key based on the [systemitem]``SLE-Product-SUSE-Manager-Proxy-4.0-Pool`` base channel.
-For more information about activation keys, see pass:c[creating-activation-keys.adoc#create.activation.keys[]]
+For more information about activation keys, see xref:client-configuration:clients-and-activation-keys.adoc[Creating Activation Key].
 +
 
 .Proxy Activation Key
@@ -51,18 +51,18 @@ Using Salt is the default.
 // Enable Remote Configuration
 // Enable Remote Commands
 For more information about bootstrap scripts, see
-pass:c[registration-bootstrap.adoc#modify.bootstrap.script[]].
+xref:client-configuration:registration-bootstrap.adoc[].
 +
 
 .Modifying Bootstrap Script
 image::proxy-bootstrap.png[]
 
-. Create the SUSE Manager Tools Repository for bootstrapping, see pass:c[xref:quickstart3_chap_suma_keys_and_first_client.adoc#create.tools.repository[Create Tools Repository]].
-. Bootstrap the client with the bootstrap script.  For more information, see pass:c[xref:FILENAME.adoc#connect.first.clien []].
+. Create the SUSE Manager Tools Repository for bootstrapping, see xref:client-configuration:creating-a-tools-repository.adoc[Create Tools Repository].
+. Bootstrap the client with the bootstrap script.  For more information, see xref:client-configuration/pages/registration-bootstrap.adoc[].
 . In case of a Salt client, accept the key on the menu:Main Menu[Salt > Keys] page by clicking the check mark and it will appear in the menu:Main Menu[Systems > Overview].
 . Check via menu:System Details[Software > Software Channels] that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected; [systemitem]``SLE-PRODUCT-Pool`` as the base channel and the others as child channels.
 
 // Screen shot update required
 .Proxy Channels
-image::sles12-proxy-channels.png[]
+image::sles15-proxy-channels.png[]
 
