cleanup proxy setup and registration

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -16,7 +16,9 @@ endif::[]
 // better disabling for now; needs a complete overhaul
 // 2019-06-03, ke :
 // *** xref:install-vm.adoc[Install VM]
-*** xref:install-server.adoc[Install Server from Packages]
+// better disabling for now; needs a complete overhaul
+// 2019-06-04, ke :
+// *** xref:install-server.adoc[Install Server from Packages]
 //*** xref:install-proxy.adoc[Install Proxy from Packages]
 *** xref:install-ibmz.adoc[Install on IBM Z]
 ** Setting Up
