--- a/modules/installation/pages/proxy-registration.adoc
+++ b/modules/installation/pages/proxy-registration.adoc
@@ -59,10 +59,10 @@ image::proxy-bootstrap.png[]
 
 . Create the SUSE Manager Tools Repository for bootstrapping, see xref:client-configuration:creating-a-tools-repository.adoc[Create Tools Repository].
 . Bootstrap the client with the bootstrap script.  For more information, see xref:client-configuration/pages/registration-bootstrap.adoc[].
-. In case of a Salt client, accept the key on the menu:Main Menu[Salt > Keys] page by clicking the check mark and it will appear in the menu:Main Menu[Systems > Overview].
+. In case of a Salt minion, accept the key on the menu:Main Menu[Salt > Keys] page by clicking the check mark.
+It then will appear in the menu:Main Menu[Systems > Overview].
 . Check via menu:System Details[Software > Software Channels] that the four proxy channels ([systemitem]``Pool`` and [systemitem]``Updates`` for [systemitem]``SLE-PRODUCT`` and [systemitem]``SLE-MODULE``) plus the recommended channels are selected; [systemitem]``SLE-PRODUCT-Pool`` as the base channel and the others as child channels.
 
-// Screen shot update required
 .Proxy Channels
 image::sles15-proxy-channels.png[]
 
