removed all depreciated prompt.root entities

--- a/modules/client-configuration/pages/contact-methods.adoc
+++ b/modules/client-configuration/pages/contact-methods.adoc
@@ -299,7 +299,7 @@ It is necessary to copy the ssh key to your proxy.
 This can be achieved by executing the following command from the server:
 
 ----
-{prompt.root}mgr-ssh-push-init --client`proxy`
+mgr-ssh-push-init --client`proxy`
 ----
 
 [[bp.contact.methods.saltssh.push]]
