--- a/modules/client-configuration/pages/disconnected-setup.adoc
+++ b/modules/client-configuration/pages/disconnected-setup.adoc
@@ -78,13 +78,13 @@ Enter:
 +
 
 ----
-{prompt.root}rmt-cli export data /mnt/usb
+rmt-cli export data /mnt/usb
 ----
 . Export settings about repositories to mirror to the specified path (in this case, [path]``/mnt/usb`` ); this command will create a [path]``repos.json`` file there:
 +
 
 ----
-{prompt.root}rmt-cli export settings /mnt/usb
+rmt-cli export settings /mnt/usb
 ----
 +
 
@@ -93,7 +93,7 @@ Enter:
 +
 
 ----
-{prompt.root}rmt-cli export repos /mnt/usb
+rmt-cli export repos /mnt/usb
 ----
 +
 . Unmount the storage medium and carry it securely to your {productname} server.
@@ -115,7 +115,7 @@ The following procedure will guide you through using SMT.
 +
 
 ----
-{prompt.root}smt-sync --createdbreplacementfile /tmp/dbrepl.xml
+smt-sync --createdbreplacementfile /tmp/dbrepl.xml
 ----
 
 [[pro.mgr.tool.mount.storage]]
@@ -135,7 +135,7 @@ IMPORTANT: The directory being written to must be writeable for the same user as
 You can check if the correct user is specified via the following command:
 
 ----
-{prompt.root}egrep '^smtUser' /etc/smt.conf
+egrep '^smtUser' /etc/smt.conf
 ----
 +
 
