--- a/modules/installation/pages/install-ibmz.adoc
+++ b/modules/installation/pages/install-ibmz.adoc
@@ -99,5 +99,5 @@ This must be set up before you continue with installation.
 . Run {productname} setup to finalize the {productname} installation:
 +
 ----
-{prompt.root}yast2 susemanagersetup
+yast2 susemanagersetup
 ----
