--- a/modules/upgrade/pages/migrate-3x-4x.adoc
+++ b/modules/upgrade/pages/migrate-3x-4x.adoc
@@ -43,7 +43,7 @@ The dump gets compressed with [command]``gzip`` using the default compression op
 Check the disk usage of the database; for example, a small test installation:
 
 ----
-{prompt.root}du -sch /var/lib/pgsql/data
+du -sch /var/lib/pgsql/data
 ==>
 1,8G    data
 1,8G    total
