$redhat_management_server gets replaced automatically

--- a/modules/upgrade/pages/proxy-migration.adoc
+++ b/modules/upgrade/pages/proxy-migration.adoc
@@ -46,7 +46,7 @@ Replace the label [literal]``proxy4`` with the one you use for your autoinstalla
 [[proxy-migration-inplace-profile]]
 === Autoinstallation Profile
 
-Use this autoinstallation profile as an example.  Replace `$redhat_management_server` with the hostname of your server.
+Use this autoinstallation profile as an example.
 
 ----
 <?xml version="1.0"?>
