--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -38,7 +38,7 @@ Make sure the proxie's TCP ports `4505` and `4506` are open and that the proxy c
 == Copy Server Certificate and Key
 
 The proxy will share some SSL information with the {productname} server.
-Therefor the next step is to copy the certificate and its key from the {productname} 4 server or the upstream proxy.
+Copy the certificate and its key from the {productname} 4 server or the upstream proxy.
 
 As root, enter the following commands on the proxy using your {productname} 4 server or chained proxy 4 named [replaceable]``PARENT``:
 
