--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -26,7 +26,9 @@ Keep in mind {suse} only provides support for [command]``spacewalk-clone-by-date
 +
 
 ----
-spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7' spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7-updates' spacewalk-common-channels -u admin -p`secret`-a x86_64 'spacewalk26-client-centos7'
+spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7'
+spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7-updates'
+spacewalk-common-channels -u admin -p`secret`-a x86_64 'spacewalk26-client-centos7'
 ----
 +
 .Required Channel References
