fix command listings https://github.com/SUSE/doc-susemanager/commit/103c9cd4adda05c3c77d87b1f22360f749260822

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -129,7 +129,8 @@ yum install salt salt-minion
 +
 
 ----
-mkdir -p /etc/salt/minion.d echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
+mkdir -p /etc/salt/minion.d
+echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
 ----
 . Restart the minion
 +
