--- a/modules/client-configuration/pages/clients-rh.adoc
+++ b/modules/client-configuration/pages/clients-rh.adoc
@@ -192,7 +192,8 @@ http://`server`/pub/
 +
 
 ----
-chmod +x res7-bootstrap.sh ./res7-boostrap.sh
+chmod +x res7-bootstrap.sh
+./res7-boostrap.sh
 ----
 
 . From the {productname} {webui} select menu:Salt[Keys] and accept the new minion's key.
@@ -230,7 +231,8 @@ yum install salt-minion
 +
 
 ----
-mkdir /etc/salt/minion.d echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
+mkdir /etc/salt/minion.d
+echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
 ----
 . Start the minion service:
 +
