Update clients-centos.adoc (#516)
* fix command listings
https://github.com/SUSE/doc-susemanager/commit/103c9cd4adda05c3c77d87b1f22360f749260822

--- a/modules/client-configuration/pages/clients-centos.adoc
+++ b/modules/client-configuration/pages/clients-centos.adoc
@@ -26,7 +26,9 @@ Keep in mind {suse} only provides support for [command]``spacewalk-clone-by-date
 +
 
 ----
-spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7' spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7-updates' spacewalk-common-channels -u admin -p`secret`-a x86_64 'spacewalk26-client-centos7'
+spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7'
+spacewalk-common-channels -u admin -p`secret`-a x86_64 'centos7-updates'
+spacewalk-common-channels -u admin -p`secret`-a x86_64 'spacewalk26-client-centos7'
 ----
 +
 .Required Channel References
@@ -127,7 +129,8 @@ yum install salt salt-minion
 +
 
 ----
-mkdir -p /etc/salt/minion.d echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
+mkdir -p /etc/salt/minion.d
+echo "master:`server_fqdn`" > /etc/salt/minion.d/susemanager.conf
 ----
 . Restart the minion
 +
