Proxy setup cleanup ke (#510)
* cleanup proxy setup and registration
  mostly xrefs
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/installation/pages/proxy-setup.adoc
+++ b/modules/installation/pages/proxy-setup.adoc
@@ -37,16 +37,17 @@ Make sure the proxie's TCP ports `4505` and `4506` are open and that the proxy c
 [[at.manager.proxy.run.copycert]]
 == Copy Server Certificate and Key
 
-The proxy will share some SSL information with the {productname} server, so the next step is to copy the certificate and its key from the {productname} server or the upstream proxy.
+The proxy will share some SSL information with the {productname} server.
+Copy the certificate and its key from the {productname} 4 server or the upstream proxy.
 
-As root, enter the following commands on the proxy using your {productname} server or chained proxy named [replaceable]``PARENT``:
+As root, enter the following commands on the proxy using your {productname} 4 server or chained proxy 4 named [replaceable]``PARENT``:
 
 ----
-mkdir /root/ssl-build
+mkdir -m 700 /root/ssl-build
 cd /root/ssl-build
-scp root@PARENT:/usr/share/rhn/RHN-ORG-PRIVATE-SSL-KEY .
-scp root@PARENT:/usr/share/rhn/RHN-ORG-TRUSTED-SSL-CERT .
-scp root@PARENT:/usr/share/rhn/rhn-ca-openssl.cnf .
+scp root@PARENT:/root/ssl-build/RHN-ORG-PRIVATE-SSL-KEY .
+scp root@PARENT:/root/ssl-build/RHN-ORG-TRUSTED-SSL-CERT .
+scp root@PARENT:/root/ssl-build/rhn-ca-openssl.cnf .
 ----
 
 
