updated many systems xrefs

--- a/modules/reference/pages/systems/ssm-overview.adoc
+++ b/modules/reference/pages/systems/ssm-overview.adoc
@@ -182,24 +182,10 @@ See the scheduled change actions.
 
 Like in the menu:System Details[Channels > Configuration] tab, the subtabs here can be used to subscribe the selected systems to configuration channels and deploy and compare the configuration files on the systems.
 The channels are created in the [guimenu]``Manage Config Channels`` interface within the menu:Main Menu[Software] category.
-Refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.config.overview>>
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-configuration.adoc#ref.webui.config.overview, Configuration Channels>>
-endif::[]
-for channel creation instructions.
+Refer to xref:reference:configuration/config-channels.adoc[Configuration Channels] for channel creation instructions.
 
 To manage the configuration of a system, install the latest [path]``mgr-cfg*`` packages.
-Refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.config.preparing>>
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-configuration.adoc#ref.webui.config.preparing, Preparing Configuration Channels>>
-endif::[]
-for instructions on enabling and disabling scheduled actions for a system.
+Refer to xref:reference:configuration/config-menu.adoc#ref.webui.config.preparing[Preparing Systems for Configuration Management] for instructions on enabling and disabling scheduled actions for a system.
 
 
 
@@ -337,13 +323,7 @@ You will be notified on the next page if that happens.
 To use Cobbler system records for autoinstallation, select [guimenu]``Create PXE Installation Configuration``.
 With PXE boot, you cannot only reinstall clients, but automatically install machines that do not have an operating system installed yet.
 {productname} and its network must be properly configured to enable boot using PXE.
-For more information on Cobbler and {kickstart} templates, refer to
-ifndef::env-github,backend-html5[]
-<<advanced.topics.cobbler>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<advanced_topics_cobbler.adoc#advanced.topics.cobbler, Cobbler>>
-endif::[]
+For more information on Cobbler and {kickstart} templates, refer to xref:client-configuration:cobbler.adoc[Cobbler]
 
 
 [NOTE]
@@ -397,7 +377,7 @@ image::systems_ssm_remote_command.png[scaledwidth=80%]
 
 
 First create a [path]``run`` file on the client systems to allow this function to operate.
-Refer to <<s5-sm-system-details-remote>> for instructions.
+Refer to xref:reference:systems/system-details/sd-remote-commands.adoc[Remote Command] for instructions.
 Then identify a specific user, group, timeout period, and the script to run.
 Select a date and time to execute the command and click btn:[Schedule].
 
@@ -431,13 +411,7 @@ image::systems_ssm_audit.png[scaledwidth=80%]
 Enter the command and command line arguments, and the path to the XCCDF document.
 Then schedule the scan.
 All target systems are listed below with a flag whether they support OpenSCAP scans.
-For more details on OpenSCAP and audits, refer to
-ifndef::env-github,backend-html5[]
-<<ref.webui.audit>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-audit.adoc#ref.webui.audit, Audit>>.
-endif::[]
+For more details on OpenSCAP and audits, refer to xref:reference:audit/audit-menu.adoc[Audit Menu]
 
 
 
@@ -519,10 +493,4 @@ image::systems_ssm_misc_delete_confirm.png[scaledwidth=80%]
 
 Select the appropriate systems, then click the [guimenu]``Reboot Systems`` link to select these systems for reboot.
 
-To cancel a reboot action, see
-ifndef::env-github,backend-html5[]
-<<ref.webui.schedule.pending>>.
-endif::[]
-ifdef::env-github,backend-html5[]
-<<reference-webui-schedule.adoc#ref.webui.schedule.pending, Pending Schedule Actions>>.
-endif::[]
+To cancel a reboot action, see xref:reference:schedule/pending-actions.adoc[Pending Actions]
