--- a/modules/reference/pages/systems/system-details.adoc
+++ b/modules/reference/pages/systems/system-details.adoc
@@ -105,7 +105,7 @@ Indicates whether a system has been locked.
 Actions cannot be scheduled for locked systems on the Web interface until the lock is removed manually.
 This does not include preventing automated patch updates scheduled via the Web interface.
 To prevent the application of automated patch updates, deselect menu:System Details[Properties > Auto Patch Update].
-For more information, refer to <<s5-sm-system-details-properties>>.
+For more information, refer to xref:reference:systems/system-details/sd-properties.adoc[SD Properties].
 +
 
 Locking a system can prevent you from accidentally changing a system.
@@ -124,7 +124,7 @@ Refer to <<ref.webui.systems.systemgroups>> for more information about System Gr
 +
 
 It is also possible to lock multiple systems via the System Set Manager.
-Refer to <<s4-sm-ssm-misc-lock>> for instructions.
+Refer to xref:reference:systems/ssm-overview.adoc#s4-sm-ssm-misc-lock[SSM Misc - Lock/Unlock] for instructions.
 
 
 === Subscribed Channels
@@ -133,8 +133,7 @@ List of subscribed channels.
 Clicking a channel name takes you to the [guimenu]``Basic Channel Details`` page.
 To change subscriptions, click the [guimenu]``Alter Channel Subscriptions`` link right beside the title to assign available base and child channels to this system.
 When finished making selections, click the btn:[Change Subscriptions] button to change subscriptions and the base software channel.
-For more information, see
-<<s5-sm-system-details-channels-software>>.
+For more information, see xref:reference:systems/sd-software-channels.adoc[SD Software Channels].
 
 
 Base Channel::
