updated more xrefs

--- a/modules/reference/pages/systems/autoinst-profiles.adoc
+++ b/modules/reference/pages/systems/autoinst-profiles.adoc
@@ -30,10 +30,12 @@ image::create_profile_wizard.png[scaledwidth=444]
 +
 .Creating Base Channel
 NOTE: Base channels are only available if a suitable distribution is created first.
-For creating distributions, see xref:reference:systems/autoinst-distribution.adoc[Distributions].
+For creating distributions, see
+xref:reference:systems/autoinst-distributions.adoc[Distributions]
+
 +
 
-. Select an [guimenu]``Kickstartable Tree`` for this profile. The [guimenu]``Kickstartable Tree`` drop-down menu is only populated if one or more distributions have been created for the selected base channel (see xref:reference:systems/autoinst-distribution.adoc[Distributions]).
+. Select an [guimenu]``Kickstartable Tree`` for this profile. The [guimenu]``Kickstartable Tree`` drop-down menu is only populated if one or more distributions have been created for the selected base channel (see xref:reference:systems/autoinst-distributions.adoc[Distributions]).
 . Instead of selecting a specific tree, you can also check the box [guimenu]``Always use the newest Tree for this base channel``. This setting lets {productname} automatically pick the latest tree that is associated with the specified base channels. If you add new trees later, {productname} will always keep the most recently created or modified.
 . Select the [guimenu]``Virtualization Type`` from the drop-down menu.
 +
