--- a/modules/reference/pages/systems/system-details.adoc
+++ b/modules/reference/pages/systems/system-details.adoc
@@ -119,7 +119,7 @@ For example, if a user logs in to the client directly and runs {yast} Online Upd
 
 Locking a system _does not_ restrict the number of users who can access the system via the Web interface.
 If you want to restrict access to the system, associate that system with a System Group and assign a System Group Administrator to it.
-Refer to <<ref.webui.systems.systemgroups>> for more information about System Groups.
+Refer to xref:reference:systems/system-groups.adoc[System Groups] for more information about System Groups.
 ====
 +
 
