--- a/modules/reference/pages/systems/system-groups.adoc
+++ b/modules/reference/pages/systems/system-groups.adoc
@@ -102,7 +102,7 @@ To add systems to the specified system group, click the check boxes to their lef
 
 List of relevant patches for systems in the system group.
 Clicking the advisory takes you to the [guimenu]``Details`` tab of the [guimenu]``Patch Details`` page.
-(Refer to xref:referernce:patches/patch-details.adoc[Patch Details] for more information.)
+(Refer to xref:reference:patches/patch-details.adoc[Patch Details] for more information.)
 Clicking the Affected Systems number lists all of the systems affected by the patch.
 To apply the patch updates in this list, select the systems and click the btn:[Apply Patches] button.
 
@@ -122,7 +122,7 @@ To change the system group's users, select and deselect the appropriate check bo
 === States
 
 // FIXME : menu:State Catalog[] gone
-The [guimenu]``States`` tab displays states which have been created and added using the menu:Salt[] > menu:State Catalog[].
+The [guimenu]``States`` tab displays states which have been created and added using the menu:Salt[State Catalog].
 From this page you can select which states should be applied across a group of systems.
 A state applied from this page will be applied to all minions within a group.
 
