--- a/modules/reference/pages/systems/systems-overview.adoc
+++ b/modules/reference/pages/systems/systems-overview.adoc
@@ -1,10 +1,6 @@
 [[ref-systems-systems-intro]]
 = Systems Overview
 
-
-
-
-
 If you select menu:Main Menu[Systems > Overview], an overview of all Systems appears.
 From this page you can select systems to perform actions on and may create system profiles.
 
@@ -17,14 +13,14 @@ Several columns provide information about each system:
 Select box::
 Systems without a system type cannot be selected. To select systems, mark the appropriate check boxes.
 Selected systems are added to the *System Set Manager*, where actions can be carried out simultaneously on all systems in the set.
-For more information, see <<ref.webui.systems.ssm>>.
+For more information, see xref:reference:systems/ssm-overview.adoc[System Set Manager Overview].
 +
 
 System::
 The name of the system specified during registration.
 The default name is the host name of the system.
 Clicking the name of a system displays its [guimenu]``System Details`` page.
-For more information, see <<s3-sm-system-details>>.
+For more information, see xref:reference:systems/system-details.adoc[System Details].
 +
 
 * image:spacewalk-icon-virtual-host.svg[Virtual Host,scaledwidth=1.8em] -- Virtual Host.
