removed <text> from existing xrefs in systems

--- a/modules/reference/pages/systems/advanced-search.adoc
+++ b/modules/reference/pages/systems/advanced-search.adoc
@@ -13,7 +13,7 @@ Type the keyword, select the criterion to search by, use the radio buttons to sp
 To list all systems that do _not_ match the criteria, select the [guimenu]``Invert Result`` check box.
 
 The results appear at the bottom of the page.
-For details on how to use the resulting system list, refer to xref:reference:systems/systems-list.adoc[Systems List].
+For details on how to use the resulting system list, refer to xref:reference:systems/systems-list.adoc[].
 
 [NOTE]
 ====
