--- a/modules/reference/pages/systems/autoinst-file-preservation.adoc
+++ b/modules/reference/pages/systems/autoinst-file-preservation.adoc
@@ -20,4 +20,4 @@ No regular expression wildcards can be used.
 
 When finished, you may include the file preservation list in the Kickstart profile to be used on systems containing those files.
 
-Refer to: xref:reference:systems/autoinst-profiles.adoc#ref.webui.systems.autoinst.profiles.create[Create a Kickstart Profile] for precise steps.
+Refer to: xref:reference:systems/autoinst-profiles.adoc#ref.webui.systems.autoinst.profiles.create[] for precise steps.
