--- a/modules/reference/pages/systems/autoinst-profile-details.adoc
+++ b/modules/reference/pages/systems/autoinst-profile-details.adoc
@@ -88,7 +88,7 @@ Understanding this hierarchy can alleviate confusion when using variables in {ki
 
 
 Using variables are just one part of the larger Cobbler infrastructure for creating templates that can be shared between multiple profiles and systems.
-For more information about Cobbler and templates, refer to xref:client-configuration:cobbler.adoc[Cobbler].
+For more information about Cobbler and templates, refer to xref:client-configuration:cobbler.adoc[].
 
 
 
@@ -166,7 +166,7 @@ volgroup myvg pv.01 logvol / --vgname=myvg --name=rootvol --size=1000 --grow
 
 If you have previously created a file preservation list, include this list as part of the {kickstart}.
 This will protect the listed files from being over-written during the installation process.
-Refer to xref:reference:systems/autoinst-file-preservation.adoc[File Preservation] for information on how to create a file preservation list.
+Refer to xref:reference:systems/autoinst-file-preservation.adoc[] for information on how to create a file preservation list.
 
 
 
@@ -213,7 +213,7 @@ If you would like to know what package groups are available, and what packages t
 == Package Profiles
 
 If you have previously created a Package Profile from one of your registered systems, you can use that profile as a template for the files to be installed on a kickstarted system.
-Refer to xref:reference:systems/system-details/sd-packages.adoc#s1-package-profiles[SD Package Profiles] for more information about package profiles.
+Refer to xref:reference:systems/system-details/sd-packages.adoc#s1-package-profiles[] for more information about package profiles.
 
 
 
@@ -276,9 +276,9 @@ The [guimenu]``Autoinstallation File`` tab allows you to view or download the pr
 
 Click the [guimenu]``Upload Kickstart/Autoyast File`` link from the menu:Systems[Autoinstallation] page to upload an externally prepared {ay} or Kickstart profile.
 
-. In the first line, enter a profile [guimenu]``Label`` for the automated installation. This label[] drop-down menu is only populated if one or more distributions have been created for the selected base channel (see xref:reference:systems/autoinst-distributions.adoc[Distributions]).
+. In the first line, enter a profile [guimenu]``Label`` for the automated installation. This label[] drop-down menu is only populated if one or more distributions have been created for the selected base channel (see xref:reference:systems/autoinst-distributions.adoc[]).
 . Instead of selecting a specific tree, you can also check the box [guimenu]``Always use the newest Tree`` for this base channel. This setting lets {productname} automatically pick the latest tree that is associated with the specified base channels. If you add new trees later, {productname} will always keep the most recently created or modified.
-. Select the [guimenu]``Virtualization Type`` from the drop-down menu. For more information about virtualization with **traditional clients**, refer to xref:administration:virtualization.adoc[Virtualization].
+. Select the [guimenu]``Virtualization Type`` from the drop-down menu. For more information about virtualization with **traditional clients**, refer to xref:administration:virtualization.adoc[].
 
 +
 NOTE: If you do not intend to use the autoinstall profile to create virtual guest systems, you can leave the drop-down set to the default choice [guimenu]``KVM Virtualized Guest``.
