--- a/modules/reference/pages/systems/system-details/sd-configuration.adoc
+++ b/modules/reference/pages/systems/system-details/sd-configuration.adoc
@@ -106,7 +106,7 @@ Under [guimenu]``Create File``, you can directly create the configuration file f
 Select the file type, specify the path and file name, where to store the file, plus the symbolic link target file name and path.
 Ownership and permissions and macro delimiters need to be set.
 For more information on using macros, see:
-xref:reference:configuration/files-locally-managed.adoc#s3-sm-file-macros[Using Macros].
+xref:reference:configuration/files-locally-managed.adoc#s3-sm-file-macros[].
 
 In the [guimenu]``File Contents`` text box, type the configuration file.
 Select the type of file you are creating from the drop-down box.
@@ -138,8 +138,8 @@ image::system_details_traditional_configuration_diff_file.png[scaledwidth=80%]
 
 Select the files to be compared, click the btn:[Compare Files] button, select a time to perform the diff, and click the btn:[Schedule Compare] button to confirm.
 
-To watch progress, see xref:reference:systems/system-details/sd-events.adoc[SD Events].
-After the diff has been performed, go to [guimenu]``Recent Events`` in xref:reference:systems/system-details/sd-events.adoc[SD Events] to see the results.
+To watch progress, see xref:reference:systems/system-details/sd-events.adoc[].
+After the diff has been performed, go to [guimenu]``Recent Events`` in xref:reference:systems/system-details/sd-events.adoc[] to see the results.
 
 
 
