--- a/modules/reference/pages/systems/systems-list.adoc
+++ b/modules/reference/pages/systems/systems-list.adoc
@@ -54,7 +54,7 @@ Clicking the host name of such a guest system displays its [guimenu]``System Det
 == Unprovisioned Systems
 
 Here, all unprovisioned (bare-metal) systems with hardware details are listed.
-For more information, see xref:reference:admin/bare-metal-systems.adoc[Bare-metal Systems].
+For more information, see xref:reference:admin/bare-metal-systems.adoc[].
 
 
 image::systems_bare_metal.png[scaledwidth=80%]
@@ -130,7 +130,7 @@ The reason may be one of the following:
 * The system is not entitled to any {productname} service.
 System profiles that remain unentitled for 180 days (6 months) are removed.
 * The system is entitled, but the {productname} daemon ([systemitem]``rhnsd``) has been disabled on the system.
-Refer to xref:client-configuration:contact-methods.adoc[Contact Methods]
+Refer to xref:client-configuration:contact-methods.adoc[]
 
 for instructions on restarting and troubleshooting.
 * The system is behind a firewall that does not allow connections over [systemitem]``https`` (port 443).
