--- a/modules/reference/pages/systems/activation-keys.adoc
+++ b/modules/reference/pages/systems/activation-keys.adoc
@@ -10,8 +10,8 @@ System-specific activation keys created through the [guimenu]``Reactivation`` su
 ====
 
 For more information about Activation Keys, see
-xref:client-configuration:creating-activation-keys.adoc[Creating Activation Keys]
-and: xref:client-configuration:client-and-activation-keys.adoc[Activation Keys]
+xref:client-configuration:creating-activation-keys.adoc[]
+and: xref:client-configuration:client-and-activation-keys.adoc[]
 
 
 
@@ -59,7 +59,7 @@ Select the child channels you need (for example, the Tools child channel).
 . [guimenu]``Contact Method`` - Select how clients communicate with {productname}. [guimenu]``Default`` (Pull) waits for the client to check in. With [guimenu]``Push via SSH`` and [guimenu]``Push via SSH tunnel`` the server contacts the client via SSH (with or without tunnel) and pushes updates and actions, etc.
 +
 For more information about contact methods, see
-xref:client-configuration:contact-methods.adoc[Contact Methods].
+xref:client-configuration:contact-methods.adoc[].
 
 
 . [guimenu]``Universal Default`` -- Select whether this key should be considered the primary activation key for your organization.
