--- a/modules/reference/pages/systems/systems-overview.adoc
+++ b/modules/reference/pages/systems/systems-overview.adoc
@@ -13,14 +13,14 @@ Several columns provide information about each system:
 Select box::
 Systems without a system type cannot be selected. To select systems, mark the appropriate check boxes.
 Selected systems are added to the *System Set Manager*, where actions can be carried out simultaneously on all systems in the set.
-For more information, see xref:reference:systems/ssm-overview.adoc[System Set Manager Overview].
+For more information, see xref:reference:systems/ssm-overview.adoc[].
 +
 
 System::
 The name of the system specified during registration.
 The default name is the host name of the system.
 Clicking the name of a system displays its [guimenu]``System Details`` page.
-For more information, see xref:reference:systems/system-details.adoc[System Details].
+For more information, see xref:reference:systems/system-details.adoc[].
 +
 
 * image:spacewalk-icon-virtual-host.svg[Virtual Host,scaledwidth=1.8em] -- Virtual Host.
