update left nav bar https://github.com/SUSE/spacewalk/issues/7766

--- a/modules/reference/pages/navigation/left-navigation-bar.adoc
+++ b/modules/reference/pages/navigation/left-navigation-bar.adoc
@@ -5,13 +5,13 @@ The left navigation bar is the main menu to the {productname} {webui} from where
 image::sidenav.png[scaledwidth=30%]
 
 Expand::
-If you select a the label of a menu entry you either open that page, or, if it is just a container of sub-entries, it expands this part of the menu tree without actually loading a page.
+If you click the icon or the down-arrow of a menu entry, it expands this part of the menu tree without actually loading a page.
 
 Collapse::
-To collapse all open parts of the menu system, click the btn:[Clear Menus] button at the top of menu, right to the [guimenu]``Search page`` field.
+To collapse an open part of the menu system, click the up-arrow of a menu entry.
 
 Autoload::
-If you click the small circle icon on the right of a menu label, the first available page of that menu entry will get loaded and displayed automatically.
+If you click the name of a menu entry, the first available page of that menu entry will get loaded and displayed automatically.
 
 Search::
 Enter a search string in the [guimenu]``Search page`` field to find an entry of the menu tree.
