--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -31,7 +31,7 @@ image::unifiedinstaller-registration.png[scaledwidth=80%]
 // The registration server offers update repositories.
 +
 image::unifiedinstaller-extensions.png[scaledwidth=80%]
-. In the [guimenu]``Available Extensions and Modules`` screen, select additional extensions or modules you require, and click btn:[Next].
+. In the [guimenu]``Extension and Module Selection`` screen, select additional extensions or modules you require, and click btn:[Next].
 Mandatory modules are pre-selected and you cannot disable them.
 +
 image::unifiedinstaller-addon.png[scaledwidth=80%]
