for graphical mode, select desktop

--- a/modules/installation/pages/install-server-unified.adoc
+++ b/modules/installation/pages/install-server-unified.adoc
@@ -34,6 +34,14 @@ image::unifiedinstaller-extensions.png[scaledwidth=80%]
 . In the [guimenu]``Extension and Module Selection`` screen, select additional extensions or modules you require, and click btn:[Next].
 Mandatory modules are pre-selected and you cannot disable them.
 +
+
+.Graphical Desktop Environment
+[NOTE]
+====
+The default {productname} server installation does not enable a graphical desktop environment.  If you want to run setup tools such {yast} with a graphical interface, select the [guimenu]``Desktop Applications Module``.
+====
++
+
 image::unifiedinstaller-addon.png[scaledwidth=80%]
 . OPTIONAL: In the [guimenu]``Add On Product`` screen, select any additional or add-on products you require, and click btn:[Next].
 . In the [guimenu]``System Role`` screen, check the [guimenu]``SUSE Manager Server`` checkbox, and click btn:[Next].
